--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,52 @@ body{
     width: 100%;
     margin: 0%;
 }
+/*
+paleta de colores:
+=================
+#406A9C azul
+#9C4F48 rojo 
+#389A9C celeste
+#9C7328 amarillo 
+#309C61 verde
+*/
+header{
+    width: 100%;
+    /*height: 160px;*/
+    position: relative;
+    background-color:#406A9C;
+}
+header a{
+    color:#309C61;
+    font-family: 'Gotham', sans-serif;
+    text-decoration: none;
+    background-image: url("../img/Imagotipo_PAW_Hospitals.svg");
+    display: inline-block;
+    /*
+    height: 78px;
+    */
+    aspect-ratio: 2.25;
+    width: 250px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+
+header h1 {
+    margin: 0;
+}
+
+header h1 form{
+    display: inline;
+    position: absolute;
+    bottom: 20px;
+    right: 15px;
+}
 
 .navbar {
-    background-color:#1d4f50;
+    background-color:#389A9C;
     margin: 0%;
     width: 100%;
-    height: 50px;
+    height: 55px;
     padding-top: 1px;
     overflow: visible;
     box-shadow: 0px 8px 9px -8px rgba(0,0,0,0.75);
@@ -20,6 +60,7 @@ body{
     flex-direction: row;
     justify-content: space-evenly;
     list-style: none;
+    padding: 0;
 }
 
 .navbar  a{
@@ -30,7 +71,7 @@ body{
 
 .navbarDropOption ul{
     display: none;
-    background-color:#1d4f50;
+    background-color:#389A9C;
 }
 
 .navbarDropOption li{
