arreglada la barra de busqueda en css

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,11 +36,21 @@ header h1 {
     margin: 0;
 }
 
-header h1 form{
-    display: inline;
+.Buscador{
+    display: flex;
     position: absolute;
     bottom: 20px;
     right: 15px;
+}
+
+.Buscardor input[type="text"]::placeholder {
+    display: inline;
+    color: gray;
+    font-style: italic;
+}
+.Buscador input[type="submit"]{
+    cursor: pointer;
+    display: inline;
 }
 
 .navbar {
