--- a/styles/style.css
+++ b/styles/style.css
@@ -45,12 +45,28 @@ header h1 {
 
 .Buscador input[type="text"]::placeholder {
     display: inline;
-    color: gray;
+    color: white;
     font-style: italic;
 }
 .Buscador input[type="submit"]{
     cursor: pointer;
     display: inline;
+}
+
+.search-box {
+    background-color: transparent;
+    border-style: none;
+    font-size: 18px;
+    color: white; /* Añadiendo color al texto */
+    outline: none; /* Quitando el borde cuando está enfocado */
+    position: relative;
+}
+
+.Buscador input[type="text"]:focus {
+    /* Agregando el fondo */
+    background-color: #f5f5f5; 
+    /* Disminuyendo la opacidad del icono de búsqueda */
+    color: rgba(51, 51, 51, 0.7); 
 }
 
 .navbar {
