--- a/styles/style.css
+++ b/styles/style.css
@@ -4,18 +4,26 @@ body{
 }
 /*
 paleta de colores:
+primarios
 =================
-#406A9C azul
-#9C4F48 rojo 
-#389A9C celeste
-#9C7328 amarillo 
-#309C61 verde
+verde #1d4f50
+Amarillo #fdc427
+Rojo #d34240
+Azul #219ddc
+blanco 
+
+*/
+
+/*
+-----------------------------
+HEADER - BUSCADOR - LOGO
+-----------------------------
 */
 header{
     width: 100%;
     /*height: 160px;*/
     position: relative;
-    background-color:#406A9C;
+    background-color:white;
 }
 header a{
     color:#309C61;
@@ -41,13 +49,25 @@ header h1 {
     position: absolute;
     bottom: 20px;
     right: 15px;
+   
 }
 
 .Buscador input[type="text"]::placeholder {
     display: inline;
-    color: white;
+    color: black;
+    background-color: #fdc42791;
     font-style: italic;
+    padding-left: 5px; 
 }
+
+
+.Buscador input[type="text"] {
+    border-radius: 5px;
+    padding-left: 5px; 
+    transition: 1s;
+}
+
+
 .Buscador input[type="submit"]{
     cursor: pointer;
     display: inline;
@@ -57,20 +77,24 @@ header h1 {
     background-color: transparent;
     border-style: none;
     font-size: 18px;
-    color: white; /* Añadiendo color al texto */
+    color: black; /* Añadiendo color al texto */
     outline: none; /* Quitando el borde cuando está enfocado */
     position: relative;
 }
 
 .Buscador input[type="text"]:focus {
-    /* Agregando el fondo */
-    background-color: #f5f5f5; 
-    /* Disminuyendo la opacidad del icono de búsqueda */
-    color: rgba(51, 51, 51, 0.7); 
+    background-color: #fdc427;
 }
 
+/*
+-----------------------------
+BARRA DE NAVEGACION
+-----------------------------
+*/
+
+
 .navbar {
-    background-color:#389A9C;
+    background-color:#1d4f50;
     margin: 0%;
     width: 100%;
     height: 55px;
@@ -115,9 +139,14 @@ header h1 {
   
 }
 
-
-
 .navbarDropOption ul:hover  ~  a  {
     visibility: hidden;
     color: aliceblue;
 }
+
+
+/*
+-----------------------------
+FORMULARIO
+-----------------------------
+*/
