empece con las noticias pero no termine xd

--- a/styles/style.css
+++ b/styles/style.css
@@ -196,6 +196,29 @@ FORMULARIO
 
 /*
 -----------------------------
+NOTICIAS
+-----------------------------
+*/
+.noticias {
+    width: 35%;
+    float: left;
+    margin-left: 20px;
+    margin-right: 10px;
+}
+.noticias li{
+    background-color: #eef1ef;
+    border: 1px solid #025255;
+    margin-bottom: 5px;
+    padding: 10px;
+}
+.noticias a{
+    color: #025255;
+    font-size: 22px;
+    line-height: 1.4;
+}
+
+/*
+-----------------------------
 FOOTER
 -----------------------------
 */
