--- a/styles/style.css
+++ b/styles/style.css
@@ -202,8 +202,8 @@ NOTICIAS
 .noticias {
     width: 35%;
     float: left;
-    margin-left: 20px;
-    margin-right: 10px;
+    margin-left: 9%;
+    margin-right: 1%;
     
 }
 .noticias h2{
@@ -235,6 +235,52 @@ NOTICIAS
     vertical-align: text-top;
 }
 
+
+/*
+-----------------------------
+Donde nos podés encontrar
+-----------------------------
+*/
+.ubicacion{
+    float: right;
+    margin-left: 0%;
+    margin-right: 14%;
+}
+
+.ubicacion h2{
+    text-align: center;
+    color: #009dda;
+}
+.ubicacion iframe {
+    align-self: center;
+}
+
+/*
+-----------------------------
+¿Por qué elegirnos?
+-----------------------------
+*/
+.elegirnos{
+    float:inline-end;
+    margin-left: 15%;
+    margin-right: 8%;
+    margin-top: auto;
+    margin-bottom: 2%;
+}
+.elegirnos h2{
+    text-align: center;
+    color: #009dda;
+}
+.elegirnos p{
+    color: #025255;
+    font-size: 18px;
+    vertical-align: text-top;
+}
+.elegirnos iframe{
+    align-self: center;
+    width: 100%;
+    margin: auto;
+}
 /*
 -----------------------------
 FOOTER
