modifico htmls para que todos usen el style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -283,6 +283,17 @@ Donde nos podés encontrar
 }
 /*
 -----------------------------
+SolicitarTurno
+-----------------------------
+*/
+.form-turno datalist, input{
+    display: flex;
+    margin: 10px;
+}
+
+
+/*
+-----------------------------
 FOOTER
 -----------------------------
 */
