fixeo margenes index

--- a/styles/style.css
+++ b/styles/style.css
@@ -147,6 +147,14 @@ BARRA DE NAVEGACION
     color: aliceblue;
 }
 
+/*
+-----------------------------
+BODY osea MAIN
+-----------------------------
+*/
+main{
+    margin: 10%;
+}
 
 /*
 -----------------------------
@@ -186,12 +194,11 @@ FORMULARIO
     margin-bottom: 5px;   
     width:fit-content;
     padding: 10px;
-    margin-left: 83%;
+    align-self: end;
     font-weight: bold;
     background-color: #025255;
     color: white;
     border: 0;
-
 }
 
 /*
@@ -200,11 +207,7 @@ NOTICIAS
 -----------------------------
 */
 .noticias {
-    width: 35%;
-    float: left;
-    margin-left: 9%;
-    margin-right: 1%;
-    
+    float: inline-start;
 }
 .noticias h2{
     text-align: center;
@@ -214,7 +217,7 @@ NOTICIAS
     list-style: none;
     max-height: 300px;
     overflow-y: auto;
-    display: inline-block;
+    padding-left: initial;
 }
 .noticias a{
     text-decoration: none;
@@ -242,9 +245,7 @@ Donde nos podés encontrar
 -----------------------------
 */
 .ubicacion{
-    float: right;
-    margin-left: 0%;
-    margin-right: 14%;
+    float: inline-end;
 }
 
 .ubicacion h2{
@@ -262,10 +263,6 @@ Donde nos podés encontrar
 */
 .elegirnos{
     float:inline-end;
-    margin-left: 15%;
-    margin-right: 8%;
-    margin-top: auto;
-    margin-bottom: 2%;
 }
 .elegirnos h2{
     text-align: center;
