css hecho de noticias y fix noticias index fecha

--- a/styles/style.css
+++ b/styles/style.css
@@ -218,6 +218,15 @@ NOTICIAS
     float: left;
     width: 50%;
 }
+.noticias small{
+    float: initial;
+}
+.noticias li{
+    list-style: none;
+}
+.noticias .vermas{
+    float: right;
+}
 
 .noticias h2 {
     text-align: center;
