--- a/styles/style.css
+++ b/styles/style.css
@@ -129,8 +129,11 @@ BARRA DE NAVEGACION
 
 .navbar ul li {
     padding: 1em;
+    text-align: center;
 }
-
+nav ul li ul li{
+    width: auto;
+}
 .navbarDropOption ul {
     display: none;
     background-color:#025255;
@@ -138,8 +141,9 @@ BARRA DE NAVEGACION
 }
 
 .navbarDropOption li {
-    width: auto;
-    padding: 10px;
+    width: 8.4ch;
+    
+    text-align: center;
 }
 
 .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
@@ -148,11 +152,17 @@ BARRA DE NAVEGACION
     justify-content: space-between;
     padding: 0%;
     position: absolute;
+    background-color: #fcc444;
 }
 
 .navbarDropOption ul:hover  ~  a  {
     visibility: hidden;
     color: aliceblue;
+    background-color: #fcc444;
+}
+
+.navbar li:hover{
+    background-color: #fcc444;
 }
 
 /*
@@ -580,4 +590,38 @@ a.btn {
     text-decoration: none;
     color: black;
     background-color: rgb(239, 239, 239);
+}
+
+/*
+-----------------------------
+Media querys
+-----------------------------
+*/
+/*ajusto el nav*/
+@media (max-width:708px){
+    .navbar {
+        height: auto;
+        padding-top: 1px;
+        padding-left: 20%;
+        overflow: visible;
+    }
+    
+    .navbar ul { 
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    li.navbarDropOption{
+       width: 10ch;
+    }
+
+    .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
+        margin-left: 10ch;
+        background-color: #fcc444;
+        margin-top: -1.95em;
+    }
+    
+    .navbar li:hover{
+        background-color: #fcc444;
+    }
+    
 }
