--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@ header {
 }
 
 .lupa[type="submit"]{
+    margin-left: 2%;
     background-color: #eef1ef;
 }
 
@@ -92,6 +93,33 @@ header h1 {
 .Buscador input[type="text"]:focus {
     background-color: #fcc444;
 }
+
+@media (max-width:500px){
+    header h1{
+        display: flex;
+        padding-right: 20%;
+        padding-bottom: 15%;
+        padding-top: 0%;
+        padding-left: 20%;
+        flex-direction: column;
+    }
+    .Buscador{
+        padding-right: 5%;
+    }
+}
+@media (max-width:565px) and (min-width:501px){
+    header h1{
+        display: flex;
+        padding: 15%;
+        padding-top: 0%;
+        padding-left: 5%;
+        flex-direction: column;
+    }
+    .Buscador{
+        padding-right: 10%;
+    }
+}
+
 
 /*
 -----------------------------
@@ -160,6 +188,62 @@ BARRA DE NAVEGACION
 
 .navbar li:hover{
     background-color: #fcc444;
+}
+
+/*ajusto el nav*/
+@media (max-width:500px){
+    .navbar {
+        display: flex;
+        height: auto;
+        flex-direction: column;
+        padding-left: 10%;
+        margin: 0;
+    }
+    
+    .navbar ul { 
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    li.navbarDropOption{
+       width: 10ch;
+    }
+
+    .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
+        margin-left: 10ch;
+        background-color: #fcc444;
+        margin-top: -1.90em;
+    }
+    
+    .navbar li:hover{
+        background-color: #fcc444;
+    }
+}
+@media (max-width:708px) and (min-width:501px){
+    .navbar {
+        display: flex;
+        height: auto;
+        flex-direction: column;
+        padding-left: 10%;
+        margin: 0;
+    }
+    
+    .navbar ul { 
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    li.navbarDropOption{
+       width: 10ch;
+    }
+
+    .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
+        margin-left: 10ch;
+        background-color: #fcc444;
+        margin-top: -1.95em;
+    }
+    
+    .navbar li:hover{
+        background-color: #fcc444;
+    }
 }
 
 /*
@@ -587,39 +671,4 @@ a.btn {
     text-decoration: none;
     color: black;
     background-color: rgb(239, 239, 239);
-}
-
-/*
------------------------------
-Media querys
------------------------------
-*/
-/*ajusto el nav*/
-@media (max-width:708px){
-    .navbar {
-        display: flex;
-        height: auto;
-        flex-direction: column;
-        padding-left: 10%;
-        margin: 0;
-    }
-    
-    .navbar ul { 
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    li.navbarDropOption{
-       width: 10ch;
-    }
-
-    .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
-        margin-left: 10ch;
-        background-color: #fcc444;
-        margin-top: -1.95em;
-    }
-    
-    .navbar li:hover{
-        background-color: #fcc444;
-    }
-    
 }
