--- a/styles/style.css
+++ b/styles/style.css
@@ -220,6 +220,7 @@ BARRA DE NAVEGACION
 }
 @media (max-width:708px) and (min-width:501px){
     .navbar {
+        width: auto;
         display: flex;
         height: auto;
         flex-direction: column;
@@ -632,6 +633,9 @@ footer {
     color: #eef1ef;
 }
 
+.redesFooter p {
+    text-align: center;
+}
 .redesFooter {
     display: flex;
     flex-direction: column;
@@ -671,4 +675,13 @@ a.btn {
     text-decoration: none;
     color: black;
     background-color: rgb(239, 239, 239);
+}
+
+@media (max-width:500px){
+    
+}
+@media (max-width:709px) and (min-width:501px){
+   .footer {
+    
+   }
 }
