--- a/styles/style.css
+++ b/styles/style.css
@@ -677,11 +677,9 @@ a.btn {
     background-color: rgb(239, 239, 239);
 }
 
-@media (max-width:500px){
-    
-}
-@media (max-width:709px) and (min-width:501px){
-   .footer {
-    
-   }
+@media (max-width:511px){
+    footer{
+        flex-direction: column;
+        align-items: center;
+    }   
 }
