--- a/styles/style.css
+++ b/styles/style.css
@@ -94,7 +94,25 @@ header h1 {
     background-color: #fcc444;
 }
 
-@media (max-width:500px){
+@media (max-width:449px){
+    header h1{
+        display: flex;
+        padding-right: 20%;
+        padding-bottom: 15%;
+        padding-top: 0%;
+        padding-left: 20%;
+        flex-direction: column;
+    }
+    .Buscador{
+        
+    }
+    .lupa[type="submit"]{
+        padding-right: 1%;
+        margin-right: 1%;
+    }
+}
+
+@media (max-width:500px)and (min-width:450px){
     header h1{
         display: flex;
         padding-right: 20%;
@@ -193,6 +211,7 @@ BARRA DE NAVEGACION
 /*ajusto el nav*/
 @media (max-width:500px){
     .navbar {
+        width: auto;
         display: flex;
         height: auto;
         flex-direction: column;
