--- a/styles/style.css
+++ b/styles/style.css
@@ -209,7 +209,35 @@ BARRA DE NAVEGACION
 }
 
 /*ajusto el nav*/
-@media (max-width:500px){
+@media (max-width:449px){
+    .navbar {
+        width: auto;
+        display: flex;
+        height: auto;
+        flex-direction: column;
+        padding-left: 10%;
+        margin: 0;
+    }
+    
+    .navbar ul { 
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    li.navbarDropOption{
+       width: 10ch;
+    }
+
+    .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
+        margin-left: 10ch;
+        background-color: #d0244a;
+        margin-top: -1.95em;
+    }
+    
+    .navbar li:hover{
+        background-color: #fcc444;
+    }
+}
+@media (max-width:500px)and (min-width:450px){
     .navbar {
         width: auto;
         display: flex;
