--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,6 @@ BARRA DE NAVEGACION
     background-color:#025255;
     margin: 0%;
     width: 100%;
-    height: 3em;
     padding-top: 1px;
     overflow: visible;
     box-shadow: 0px 8px 9px -8px rgba(0,0,0,0.75);
@@ -203,36 +202,20 @@ BARRA DE NAVEGACION
     background-color: #fcc444;
 }
 
+.hamburgerMenu {
+    display: none;
+}
+
 /*ajusto el nav*/
-@media (max-width:449px){
-    .navbar {
-        width: auto;
-        display: flex;
-        height: auto;
-        flex-direction: column;
-        padding-left: 10%;
-        margin: 0;
-    }
-    
-    .navbar ul { 
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    li.navbarDropOption{
-       width: 10ch;
-    }
+@media (max-width:500px){
 
     .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
-        margin-left: 10ch;
-        background-color: #d0244a;
         margin-top: -1.95em;
     }
     
-    .navbar li:hover{
-        background-color: #fcc444;
-    }
 }
-@media (max-width:500px)and (min-width:450px){
+
+@media (max-width:708px) {
     .navbar {
         width: auto;
         display: flex;
@@ -242,51 +225,29 @@ BARRA DE NAVEGACION
         margin: 0;
     }
     
-    .navbar ul { 
-        flex-direction: column;
-        align-items: flex-start;
-    }
     li.navbarDropOption{
        width: 10ch;
     }
 
     .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
         margin-left: 10ch;
-        background-color: #d0244a;
-        margin-top: -1.90em;
-    }
-    
-    .navbar li:hover{
-        background-color: #fcc444;
-    }
-}
-@media (max-width:708px) and (min-width:501px){
-    .navbar {
-        width: auto;
-        display: flex;
-        height: auto;
-        flex-direction: column;
-        padding-left: 10%;
-        margin: 0;
-    }
-    
-    .navbar ul { 
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    li.navbarDropOption{
-       width: 10ch;
-    }
-
-    .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
-        margin-left: 10ch;
-        background-color: #d0244a;
         margin-top: -1.95em;
     }
-    
-    .navbar li:hover{
-        background-color: #fcc444;
+
+    .navbar ul { 
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
     }
+
+    .hamburgerMenu {
+        display:initial;
+        width:10%;
+        margin-top: 2%;
+        margin-bottom: 2%;
+        height:fit-content;
+    }
+    
 }
 
 /*
