footer mobile fix margin right redes

--- a/styles/style.css
+++ b/styles/style.css
@@ -750,8 +750,8 @@ a.btn {
         flex-direction: column;
         align-items: center;
     }   
-    footer li p{
-        margin-left: 7%;
+    footer .redesFooter{
+        margin-right: 2.5em;
     }
     footer address ul{
         padding-left: 0em;
