--- a/styles/style.css
+++ b/styles/style.css
@@ -202,8 +202,41 @@ BARRA DE NAVEGACION
     background-color: #fcc444;
 }
 
-.hamburgerMenu {
+#hamburgerMenu {
     display: none;
+}
+
+label[for=hamburgerMenu] {
+    display: none;
+    border-radius: 3px;
+    background: black;
+    position: relative;
+    height: 5px;
+    width: 30px;
+    margin: 1em 0;
+    cursor: pointer;
+}
+
+label[for=hamburgerMenu]:before {
+    border-radius: 3px;
+    background: #000;
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 0;
+    width: 30px;
+    height: 5px;
+}
+
+label[for=hamburgerMenu]:after {
+    border-radius: 3px;
+    background: #000;
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 10px;
+    width: 30px;
+    height: 5px;
 }
 
 /*ajusto el nav*/
@@ -235,19 +268,17 @@ BARRA DE NAVEGACION
     }
 
     .navbar ul { 
-        display: none;
         flex-direction: column;
         align-items: flex-start;
     }
 
-    .hamburgerMenu {
-        display:initial;
-        width:10%;
-        margin-top: 2%;
-        margin-bottom: 2%;
-        height:fit-content;
+    label[for=hamburgerMenu] {
+        display: inline-block;
     }
-    
+
+    nav #hamburgerMenu:not(:checked) ~ ul {
+        display: none;
+    }
 }
 
 /*
