--- a/styles/style.css
+++ b/styles/style.css
@@ -141,7 +141,7 @@ BARRA DE NAVEGACION
 */
 
 
-.navbar {
+nav {
     background-color:#025255;
     margin: 0%;
     width: 100%;
@@ -152,7 +152,7 @@ BARRA DE NAVEGACION
     -moz-box-shadow: 0px 8px 9px -8px rgba(0,0,0,0.75);
 }
 
-.navbar ul { 
+nav ul { 
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -161,13 +161,13 @@ BARRA DE NAVEGACION
     margin: 0;
 }
 
-.navbar a {
+nav a {
     color: white;
     font-family: 'Gotham', sans-serif;
     text-decoration: none;
 }
 
-.navbar ul li {
+nav ul li {
     padding: 1em;
     padding-inline: initial;
 }
@@ -198,7 +198,7 @@ BARRA DE NAVEGACION
     background-color: #fcc444;
 }
 
-.navbar li:hover{
+nav li:hover{
     background-color: #fcc444;
 }
 
@@ -255,7 +255,7 @@ label[for=hamburgerMenu]:after {
 }
 
 @media (max-width:708px) {
-    .navbar {
+    nav {
         width: auto;
         display: flex;
         height: auto;
@@ -273,7 +273,7 @@ label[for=hamburgerMenu]:after {
         margin-top: -1.95em;
     }
 
-    .navbar ul { 
+    nav ul { 
         flex-direction: column;
         align-items: flex-start;
     }
