--- a/styles/style.css
+++ b/styles/style.css
@@ -811,13 +811,13 @@ Vista de impresion
 
 @media print{
     header{
-        display: none !important;
+        display: none;
     }
     nav{
-        display: none !important;
+        display: none;
     }
     footer{
-        display: none !important;
+        display: none;
     }
 
     a[href]:after {
@@ -826,12 +826,5 @@ Vista de impresion
 
     main{
         float: none
-    }
-
-    h1:after { 
-        content: url(https://chart.googleapis.com/chart?cht=qr&chs=150×150&chl=http://&choe=UTF-8); 
-        position: absolute; 
-        right: 0; 
-        top: 0;
     }
 }
